--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<head>
+    <meta name="google-site-verification" content="your-verification-code" />
+    <!-- Other meta tags and content -->
+</head>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
