--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta name="google-site-verification" content="your-verification-code" />
+    <meta name="google-site-verification" content="google6ed79ea7da1ab459.html" />
     <!-- Other meta tags and content -->
 </head>
 
