--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <main>
             <h2>Welcome to the Free Minecraft! by Mr.Thisaja Youtube</h2>
             <p>Explore, build, and create your adventures just like in the game.</p>
-            <a href="https://eaglercraft.com/mc/1.8.8-wasm/" class="button">Start Now</a>
+            <a href="https://eaglercraft.com/mc/1.8.8-wasm/" class="button">Play now</a>
             <script type="module" data-zeno-bot="embed" src="https://zenoembed.textcortex.com/zeno-bot.js?embed_id=emb_01jgnz92pbe0mv9d3w2ys2a0dq"> </script>
             <!-- Add FontAwesome link in the <head> section -->
 <head>
